...
//

import UIKit

class ArticleViewController: UIViewController, UITableViewDelegate {

    internal let tableView: UITableView = {
        let table = UITableView()
        table.register(ArticleTableViewCell.self, forCellReuseIdentifier: ArticleTableViewCell.identifier)
        table.accessibilityIdentifier = "tableView"
        return table
    }()

...
        viewModel.delegate = self

        fetchMyCategoryStories()
        createDataSource()
        createSnapshot()

        title = "Artigos"
    }
    
    override func viewDidLayoutSubviews() {
        super.viewDidLayoutSubviews()
        tableView.frame = view.bounds
    }
...
