...

import UIKit

class MenuViewController: UIViewController {

    let categoryMenu = ["General", "Business", "Science", "Technology", "Health", "Entertainment", "Sports"]
    var menuCollectionView: UICollectionView!
    var search = UISearchController(searchResultsController: nil)

    var category: String? = nil
    let titleName: String = "BornLogic"

    internal let viewModel = ResponseViewModel()
...
    internal func createSearchBar() {
        navigationItem.searchController = search
        navigationItem.hidesSearchBarWhenScrolling = false
        search.hidesNavigationBarDuringPresentation = false
        search.obscuresBackgroundDuringPresentation = false
        search.searchBar.delegate = self
        search.searchBar.searchTextField.attributedPlaceholder =  NSAttributedString.init(string: "Pesquisa", attributes: [NSAttributedString.Key.foregroundColor:UIColor.red])
        search.searchBar.accessibilityIdentifier = "searchBar"
    }

    internal func fetchMyCategoryStories() {
        viewModel.fetchArticlesWithDelegate()
        viewModel.getMyCategoryStories(by: category ?? "General")
...
